[package]
name = "fssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
regex = "1.10"
dirs = "4"
glob = "0.3"
ssh2-config = "0.2.3"
whoami = "1.5.1"
tui-input = "0.8.0"
tui = "0.19.0"
fuzzy-matcher = "*"
serde = { version = "1.0.2", features = ["derive"] }
bincode = "1.3.3"
bytes = "*"
tui-term = "*"
portable-pty = "0.8"
tokio = { version = "1.38.0", features = ["full"] }
aes-gcm = "0.10.3"
unicode-width = "0.1.12"
anyhow = "1.0.86"


[dev-dependencies]
cargo-generate-rpm = "0.14.0"
